# bot_anketa

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  redis.conf  start.example.sh  start.sh
.github/workflows/: lint.yml
bot_anketa/src/: __main__.py  alembic.ini
bot_anketa/src/config/: settings.py
bot_anketa/src/db/: base.py  crud.py  dto.py  models.py
bot_anketa/src/db/migrations/: env.py
bot_anketa/src/db/migrations/versions/: d31194e386e4_add_user.py
bot_anketa/src/di/: __init__.py
bot_anketa/src/di/providers/: __init__.py  bot.py  data_storages.py  settings.py
bot_anketa/src/filters/: form.py
bot_anketa/src/handlers/: __init__.py
bot_anketa/src/handlers/callbacks/: start.py
bot_anketa/src/handlers/messages/: commands.py  form.py
bot_anketa/src/states/: __init__.py  completion.py
bot_anketa/src/utils/: keyboard.py
k8s/bot_anketa/: Chart.yaml  values.yaml
k8s/bot_anketa/templates/: NOTES.txt  _common.tpl  bot-deploy.yml  bot-secret.yml  db-deploy.yml  db-pvc.yml  db-secret.yml  db-service.yml  kvdb-config.yml  kvdb-deploy.yml  kvdb-pvc.yml  kvdb-service.yml  migration-job.yml
k8s/secrets/dev/: .sops.yaml  secrets.yml
