[tool.poetry]
name = "bot_anketa"
version = "0.1.0"
description = ""
authors = ["nezbut_ubuntu <dsfsdfsdf.sdfsdfsfdf.98@mail.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3"
sqlalchemy = "^2"
redis = "^5"
asyncpg = "^0"
dishka = "^1"
alembic = "~1.13"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
mypy = "~1.10"

[tool.poetry.scripts]
tgbot = "bot_anketa.src.__main__:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = [
    "/migrations/",
]
